--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
+/*common rules*/
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+/*container*/
 .container {
     background-color: #808080;
     height: 100vh;
@@ -12,25 +14,85 @@
     align-items: center;
 }
 
+/*slider*/
 .slider{
     max-width: 1080px;  
     width: 100%;
-}
-
-.item {
     height: 60vh;
-    position: relative;
+    display: flex;
+}
+/*items-container*/
+.items-container{
+    width: 80%;
 }
 
+/*item*/
+.item {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: none;
+}
+.item.active {
+    display: block;
+}
 .item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
+ /*bio item*/
 .bio{
     position: absolute;
     bottom:10px;
     right:10px;
     color: #fff;
     text-align: end;
+}
+
+/*items-preview-container*/
+/*thums*/
+.thumbs{
+    width: 20%;
+    position: relative;
+}
+
+/*items thumbs*/
+.item-thumbs{
+    height: calc(100% / 5);
+    opacity: 0.5;
+}
+
+.item-thumbs.active{
+    opacity: 1;
+    border: solid 2px #fff;
+}
+.item-thumbs img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/*grafica tasti della thumbs*/
+.prev, .next {
+    color: rgba(255,255,255,0.5);
+    font-size: 30px;
+    cursor: pointer;
+    position: absolute; 
+    left:50%;
+    transform: translateX(-50%);
+    
+}
+
+.prev {
+    top:5px;
+}
+
+.next {
+    bottom:5px;
+}
+
+.prev:hover, .next:hover {
+    color: rgba(255,255,255,1);
 }
