--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
 
 /*items-preview-container*/
 /*thums*/
-.thumbs{
+.thumbs-container{
     width: 20%;
     position: relative;
 }
@@ -75,14 +75,14 @@
 }
 
 /*grafica tasti della thumbs*/
-.prev, .next {
+.prev, 
+.next {
     color: rgba(255,255,255,0.5);
     font-size: 30px;
     cursor: pointer;
     position: absolute; 
     left:50%;
     transform: translateX(-50%);
-    
 }
 
 .prev {
@@ -93,6 +93,7 @@
     bottom:5px;
 }
 
-.prev:hover, .next:hover {
+.prev:hover, 
+.next:hover {
     color: rgba(255,255,255,1);
 }
